--- a/html/main.css
+++ b/html/main.css
@@ -88,15 +88,10 @@
   color: #fff;
 }
 
-/*!****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/artwork-details.vue?vue&type=style&index=0&id=b1dac1ee&scoped=true&lang=stylus ***!
-  \****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
-.container[data-v-b1dac1ee] {
-  display: flex;
-  flex-direction: column;
-  margin-top: 15px;
-}
-.container .back-btn[data-v-b1dac1ee] {
+/*!*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/back-btn.vue?vue&type=style&index=0&id=3a8ecd86&scoped=true&lang=stylus ***!
+  \*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.back-btn[data-v-3a8ecd86] {
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -105,10 +100,19 @@
   letter-spacing: 1.5px;
   opacity: 0.5;
 }
-.container .back-btn img[data-v-b1dac1ee] {
+.back-btn img[data-v-3a8ecd86] {
   margin-right: 0.25em;
   width: 14px;
   height: 14px;
+}
+
+/*!****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/artwork-details.vue?vue&type=style&index=0&id=b1dac1ee&scoped=true&lang=stylus ***!
+  \****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.container[data-v-b1dac1ee] {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
 }
 .container .details[data-v-b1dac1ee] {
   margin-top: 15px;
