--- a/html/main.css
+++ b/html/main.css
@@ -89,6 +89,71 @@
 }
 
 /*!*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/selector.vue?vue&type=style&index=0&id=71708f22&scoped=true&lang=stylus ***!
+  \*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.selector-container[data-v-71708f22] {
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+}
+.selector-container .title[data-v-71708f22] {
+  align-self: center;
+  color: #fff;
+  opacity: 0.5;
+  padding-bottom: 3px;
+}
+.selector-container .custom-select[data-v-71708f22] {
+  position: relative;
+  display: flex;
+  text-align: left;
+  outline: none;
+  height: 47px;
+  line-height: 47px;
+  min-width: 0px;
+  margin-left: auto;
+}
+.selector-container .custom-select .selected[data-v-71708f22] {
+  color: #fff;
+  padding-left: 1em;
+  cursor: pointer;
+  user-select: none;
+  opacity: 0.7;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0.47px;
+}
+.selector-container .custom-select .selected.open[data-v-71708f22] {
+  border: none;
+}
+.selector-container .custom-select .arrow[data-v-71708f22] {
+  width: 8px;
+  height: 8px;
+  margin-left: 3px;
+}
+.selector-container .custom-select .items[data-v-71708f22] {
+  color: #fff;
+  position: absolute;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  right: 0;
+  z-index: 1;
+  margin-top: 40px;
+  padding: 0 20px;
+}
+.selector-container .custom-select .items div[data-v-71708f22] {
+  color: #fff;
+  padding: 15px 0 15px 0;
+  white-space: nowrap;
+  line-height: 1;
+  cursor: pointer;
+  user-select: none;
+}
+.selector-container .custom-select .items div[data-v-71708f22]:hover {
+  color: #00f6d2;
+}
+
+/*!*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/back-btn.vue?vue&type=style&index=0&id=3a8ecd86&scoped=true&lang=stylus ***!
   \*********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
 .back-btn[data-v-3a8ecd86] {
