--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -362,7 +362,7 @@ html {
     cursor: auto !important;
 }
 
-.button {
+/* .button {
     padding: 11px 25px;
     border-radius: 50px;
     display: flex;
@@ -405,7 +405,7 @@ html {
 
 .button:not(.disabled):hover {
     box-shadow: 0 0 8px white;
-}
+} */
 
 .user-opt {
     display: flex;
