--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -152,7 +152,8 @@ html {
 .artworks {
     display:   flex;
     flex-wrap: wrap;
-    overflow: auto;
+    overflow-y: overlay;
+    overflow-x: hidden;
     margin-top: 20px;
 }
 
@@ -181,19 +182,23 @@ html {
 .artwork-title {
     font-size: 16px;
     color: #fff;
-    margin-top: 20px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding-top: 20px;
+    flex: 1
 }
 
 .artwork-likes {
     display: flex;
     align-items: center;
-    margin-left: auto;
-    margin-top: 20px;
     cursor: pointer;
+    box-sizing: border-box;
+    padding-top: 20px;
 }
 
 .artwork-likes__text {
-    margin-left: 5px;
+    padding-left: 5px;
 }
 
 .artwork-author {
@@ -225,11 +230,12 @@ html {
 
 .artwork > .info-row {
     box-sizing: border-box;
-    padding: 0 14px;
+    padding: 0 14px 0px 14px;
     display: flex;
     align-items: center;
     flex-direction: row;
     margin-bottom: 3px;
+    overflow: hidden;
 }
 
 .artwork-price-row {
